* added hashcode methods to classes with only equals declared * some minor fixes